--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "discord.js": "^14.7.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "sequelize": "^6.27.0",
-    "sqlite3": "^5.1.4"
+    "sqlite3": "^5.1.4",
+    "stripe": "^11.4.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
