--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.27.0",
     "sqlite3": "^5.1.4",
-    "stripe": "^11.4.0"
+    "stripe": "^11.4.0",
+    "swagger-jsdoc": "^6.2.7",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.20"
   }
 }
